Issue #758 Corretta procedura acquisizione ricevute. Aggiunti test case base.